# workspace

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: build.yml
assent/: Cargo.toml  README.md
assent/src/: lib.rs
blob-stream/: Cargo.toml
blob-stream/src/: err.rs  in_logic.rs  in_logic_front.rs  in_stream.rs  lib.rs  out_logic.rs  out_logic_front.rs  out_stream.rs  prelude.rs  protocol.rs  protocol_front.rs
blob-stream/tests/: in_logic.rs  in_logic_front.rs  integration.rs  integration_front.rs  out_stream.rs  test.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml  LICENSE  README.md
client/src/: lib.rs  logic.rs
client/tests/: logic.rs  test.rs  types.rs
connection-layer/: Cargo.toml
connection-layer/src/: lib.rs  test.rs
connection-layer/tests/: test.rs
crates/assent/: Cargo.toml
crates/assent/src/: lib.rs  prelude.rs
crates/assent/tests/: test.rs
crates/blob-stream/: Cargo.toml  README.md
crates/blob-stream/src/: in_logic.rs  in_logic_front.rs  in_stream.rs  lib.rs  out_logic_front.rs  prelude.rs  protocol.rs  protocol_front.rs
crates/blob-stream/tests/: helper.rs  in_logic.rs  in_logic_front.rs  integration.rs  integration_front.rs  test.rs
crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/client-connecting/: Cargo.toml
crates/client-connecting/src/: lib.rs
crates/client-connecting/tests/: test.rs
crates/client-logic/: Cargo.toml
crates/client-logic/src/: err.rs  lib.rs  logic.rs
crates/client-logic/tests/: logic.rs  test.rs
crates/client-stream/: Cargo.toml  todo_.rs
crates/client-stream/src/: client.rs  datagram_build.rs  datagram_parse.rs  lib.rs
crates/client-stream/tests/: test.rs
crates/client-with-codec/: Cargo.toml
crates/client-with-codec/src/: layer.rs  lib.rs
crates/client-with-codec/tests/: client_with_codec.rs
crates/client/src/: err.rs  lib.rs  logic.rs
crates/client/tests/: logic.rs  test.rs
crates/connection-layer/: Cargo.toml  README.md
crates/connection-layer/src/: client_codec.rs  client_to_host.rs  datagram_builder.rs  host_codec.rs  host_to_client.rs  lib.rs  prelude.rs
crates/connection-layer/tests/: test.rs
crates/datagram-builder/: Cargo.toml
crates/datagram-builder/src/: deserialize.rs  lib.rs  serialize.rs
crates/datagram-builder/tests/: test.rs
crates/datagram-connections/: Cargo.toml  README.md
crates/datagram-connections/src/: client.rs  client_to_host.rs  host_to_client.rs  lib.rs  prelude.rs
crates/datagram-connections/tests/: test.rs
crates/datagram-pinger/: Cargo.toml
crates/datagram-pinger/src/: lib.rs
crates/datagram/src/: lib.rs
crates/err-rs/: Cargo.toml
crates/err-rs/src/: lib.rs
crates/example_client/: Cargo.toml
crates/example_client/src/: layer.rs  lib.rs
crates/freelist/: Cargo.toml
crates/freelist/src/: lib.rs
crates/hexify/: Cargo.toml
crates/hexify/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: combine.rs  lib.rs  logic.rs  state.rs
crates/host/tests/: logic.rs  test.rs
crates/nimble/: Cargo.toml
crates/nimble-client-cli/: Cargo.toml
crates/nimble-client-cli/src/: main.rs
crates/nimble-snake-client/: Cargo.toml
crates/nimble-snake-client/src/: lib.rs  main.rs  snake_c.rs
crates/nimble/tests/: test.rs
crates/ordered-datagram/: Cargo.toml
crates/ordered-datagram/src/: lib.rs
crates/ordered-datagram/tests/: test.rs
crates/participant/: Cargo.toml
crates/participant-steps/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: client_to_host.rs  client_to_host_oob.rs  host_to_client.rs  host_to_client_oob.rs  lib.rs  prelude.rs
crates/protocol/tests/: test.rs
crates/rectify/: Cargo.toml  README.md
crates/rectify/src/: lib.rs
crates/rectify/tests/: test.rs
crates/sample-step/: Cargo.toml
crates/sample-step/src/: lib.rs
crates/secure-random/: Cargo.toml  README.md
crates/secure-random/src/: lib.rs
crates/secure-random/tests/: test.rs
crates/seer/: Cargo.toml
crates/seer/.github/workflows/: build.yml
crates/seer/src/: lib.rs
crates/seer/tests/: test.rs
crates/steps/: Cargo.toml
crates/steps/src/: lib.rs
crates/steps/tests/: pending.rs  serialize.rs  test.rs
crates/udp-client/: Cargo.toml
crates/udp-client/src/: lib.rs
crates/udp-client/tests/: test.rs
crates/udp-connections/: Cargo.toml
crates/udp-connections/src/: lib.rs
crates/udp-connections/tests/: test.rs
datagram/: Cargo.toml
datagram-builder/: Cargo.toml
datagram-builder/src/: deserialize.rs  lib.rs
datagram-builder/tests/: test.rs
datagram-pinger/: Cargo.toml
datagram-pinger/src/: lib.rs
datagram/src/: lib.rs
example_client/: Cargo.toml
example_client/src/: lib.rs
freelist/: Cargo.toml
freelist/src/: lib.rs
host/: Cargo.toml
host/src/: combinator.rs  combine.rs  lib.rs  logic.rs  state.rs
host/tests/: logic.rs  test.rs
nimble/: Cargo.toml
nimble/src/: lib.rs
nimble/tests/: test.rs  types.rs
ordered-datagram/: Cargo.toml
ordered-datagram/src/: lib.rs  test.rs
ordered-datagram/tests/: test.rs
participant/: Cargo.toml
participant-steps/: Cargo.toml
participant-steps/src/: lib.rs
participant/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: client_to_host.rs  client_to_host_oob.rs  host_to_client.rs  host_to_client_oob.rs  lib.rs  prelude.rs
protocol/tests/: test.rs
rectify/: Cargo.toml
rectify/src/: lib.rs  prelude.rs
rectify/tests/: test.rs
sample-step/: Cargo.toml
sample-step/src/: lib.rs
secure-random/: Cargo.toml
secure-random/src/: lib.rs
seer/: Cargo.toml
seer/src/: lib.rs  prelude.rs
seer/tests/: test.rs
steps/: Cargo.toml  LICENSE  README.md
steps/src/: lib.rs  pending_steps.rs
steps/tests/: pending.rs  serialize.rs  types.rs
transmute/: Cargo.toml
transmute/src/: lib.rs
udp-client/src/: lib.rs
udp-connections/: Cargo.toml
udp-connections/src/: lib.rs
udp-connections/tests/: test.rs
