[workspace]
members = ["nimble", "assent", "client", "host", "participant", "participant-steps", "steps", "nimble", "seer", "freelist", "protocol", "udp-client", "datagram", "udp-connections", "secure-random", "ordered-datagram", "datagram-pinger", "connection-layer", "cli", "example_client"]
resolver = "2"

