[workspace]
members = [
    "crates/nimble",
    "crates/assent",
    "crates/client-logic",
    "crates/host",
    "crates/blob-stream",
    "crates/participant",
    "crates/participant-steps",
    "crates/steps",
    "crates/nimble",
    "crates/seer",
    "crates/rectify",
    "crates/freelist",
    "crates/protocol",
    "crates/udp-client",
    "crates/datagram",
    "crates/udp-connections",
    "crates/secure-random",
    "crates/ordered-datagram",
    "crates/datagram-pinger",
    "crates/connection-layer",
    "crates/cli",
    "crates/example_client",
    "crates/sample-step",
    "crates/datagram-builder",
    "crates/client-stream",
    "crates/client-connecting"
, "crates/err-rs", "crates/hexify"]
resolver = "2"
