[package]
name = "nimble-assent"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Authoritative state"
repository = "https://github.com/nimble-rust/assent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimble-steps = { path = "../steps" }
