[package]
name = "nimble-client"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Nimble network client"
repository = "https://github.com/nimble-rust/client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimble-steps = { path = "../steps" }
nimble-protocol = { path = "../protocol" }
flood-rs = "0.0.6"
secure-random = { path = "../secure-random" }
ordered-datagram = { path = "../ordered-datagram" }
datagram-pinger = { path = "../datagram-pinger" }
log = "0.4.21"
connection-layer = { path = "../connection-layer" }

[dev-dependencies]
udp-client = { path = "../udp-client" }
udp-connections = { path = "../udp-connections" }
datagram = { path = "../datagram" }
env_logger = "0.11.3"
test-log = "0.2.16"