[package]
name = "example_client"
version = "0.1.0"
edition = "2021"

[dependencies]
nimble-steps = { path = "../steps" }
nimble-protocol = { path = "../protocol" }
flood-rs = "0.0.6"
secure-random = { path = "../secure-random" }
ordered-datagram = { path = "../ordered-datagram" }
datagram-pinger = { path = "../datagram-pinger" }
log = "0.4.21"
nimble-client = { path = "../client" }
connection-layer = { path = "../connection-layer" }
udp-client = { path = "../udp-client" }
udp-connections = { path = "../udp-connections" }
datagram = { path = "../datagram" }
nimble-seer = { path = "../seer"}
nimble-assent = { path = "../assent"}
nimble-rectify = { path = "../rectify"}

[dev-dependencies]
env_logger = "0.11.3"
test-log = "0.2.16"