[package]
name = "nimble-sample-step"
version = "0.0.1"
edition = "2021"

[dependencies]
nimble-client = { path = "../client" }
nimble-host = { path = "../host" }
nimble-assent = { path = "../assent" }
nimble-seer = { path = "../seer" }
nimble-rectify = { path = "../rectify" }
flood-rs = "0.0.8"
nimble-steps = { path = "../steps" }
tick-id = "0.0.7"
secure-random = { path = "../secure-random" }
nimble-protocol = { path = "../protocol" }
