[package]
name = "nimble-seer"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Nimble Prediction"
repository = "https://github.com/nimble-rust/seer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimble-steps = { path = "../steps" }
nimble-transmute = { path = "../transmute" }