[package]
name = "nimble-steps"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "Nimble Steps Collections"
repository = "https://github.com/piot/nimble-steps-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discoid = "0.0.3"
tick-id = "0.0.7"
