[package]
name = "nimble-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Nimble Client"
repository = "https://github.com/nimble-rust/client"

[dependencies]
log = "0.4.22"
nimble-client-logic = { path = "../client-logic" }
nimble-client-connecting = { path = "../client-connecting" }
ordered-datagram = { path = "../ordered-datagram" }
datagram-pinger = { path = "../datagram-pinger" }
flood-rs = "0.0.10"
datagram = { path = "../datagram" }
nimble-protocol = { path = "../protocol" }
nimble-connection-layer = { path = "../connection-layer" }
secure-random = { path = "../secure-random" }
nimble-rectify = { path = "../rectify" }
nimble-assent = { path = "../assent" }
nimble-seer = { path = "../seer" }
datagram-builder = { path = "../datagram-builder" }
hexify = { path = "../hexify" }
url = "2.5.2"

[dev-dependencies]
nimble-sample-step = { path = "../sample-step" }
nimble-steps = { path = "../steps" }
test-log = "0.2.16"

