[package]
name = "nimble-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Nimble Client"
repository = "https://github.com/nimble-rust/client"

[dependencies]
log = "0.4.22"
flood-rs = "0.0.10"

nimble-client-logic = { path = "../client-logic" }
nimble-client-connecting = { path = "../client-connecting" }
ordered-datagram = { path = "../ordered-datagram" }
datagram-pinger = { path = "../datagram-pinger" }
datagram = { path = "../datagram" }
nimble-protocol = { path = "../protocol" }
secure-random = { path = "../secure-random" }
nimble-rectify = { path = "../rectify" }
nimble-assent = { path = "../assent" }
nimble-seer = { path = "../seer" }
datagram-builder = { path = "../datagram-builder" }
hexify = { path = "../hexify", features = ["log_equal"] }

[dev-dependencies]
nimble-sample-step = { path = "../sample-step" }
nimble-steps = { path = "../steps" }
test-log = "0.2.16"
