[package]
name = "nimble-client-with-codec"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.22"
flood-rs = "0.0.12"
# nimble-rust = { path = "../../../nimble/crates/nimble" }
nimble-rust = "0.0.15-dev2"

hexify = "0.0.3"
datagram = "0.0.2"
udp-client = { path = "../udp-client", version = "*" }
datagram-connections = { path = "../datagram-connections", version = "*" }
connection-layer = { path = "../connection-layer", version = "*" }
secure-random = { path = "../secure-random", version = "*" }
# err-rs = "0.0.4"
app-version = "0.0.2"
monotonic-time-rs = "0.0.5"

[dev-dependencies]
test-log = "^0.2.16"
