[package]
name = "example_client"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.22"
flood-rs = "0.0.10"

nimble-steps = { path = "../steps" }
nimble-protocol = { path = "../protocol" }
secure-random = { path = "../secure-random" }
ordered-datagram = { path = "../ordered-datagram" }
datagram-pinger = { path = "../datagram-pinger" }
nimble-client = { path = "../client-stream" }
nimble-connection-layer = { path = "../connection-layer" }
udp-client = { path = "../udp-client" }
udp-connections = { path = "../udp-connections" }
datagram = { path = "../datagram" }
nimble-seer = { path = "../seer" }
nimble-assent = { path = "../assent" }
nimble-rectify = { path = "../rectify" }
nimble-sample-step = { path = "../sample-step" }
hexify = { path = "../hexify" }

[dev-dependencies]
test-log = "0.2.16"
