[package]
name = "example_client"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "^0.4.22"
flood-rs = "^0.0.11"
nimble-rust = { path = "../../../nimble/crates/nimble" }
hexify = "0.0.1"
datagram = "0.0.2"
udp-client = { path = "../udp-client", version = "*" }
udp-connections = { path = "../udp-connections", version = "*" }
connection-layer = { path = "../connection-layer", version = "*" }
secure-random = { path = "../secure-random", version = "*" }

[dev-dependencies]
test-log = "^0.2.16"
