[package]
name = "cli"
version = "0.0.1"
edition = "2021"

[dependencies]
easy-repl = "0.2.1"
anyhow = "1.0.86"
example_client = { path = "../example_client" }
flood-rs = "^0.0.11"
nimble-sample-step = { path = "../../../nimble/crates/sample-step" }
nimble-rust = { path = "../../../nimble/crates/nimble" }
env_logger = "^0.11.5"
log = "^0.4.22"
err-rs = "^0.0.2"
